<resources>
    <string name="app_name">Hotel The Grand Piano</string>
    <string name="account">Create New Account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_pass">Enter Password</string>
    <string name="already_register">Already Register…Login Here..!</string>
    <string name="not_register">Not Register…Create an Account ..!</string>
    <string name="dashboard">Dashboard</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <string name="image_logo">ImageLogo</string>
    <string name="loading">Loading…</string>
    <string name="scan">Scan QR Code</string>
    <string name="all">All</string>
    <string name="category">Category</string>
    <string name="menu">Restaurant Menu</string>
    <string name="cafe_menu">Cafe Menu</string>
    <string name="food_detail">Food Detail</string>
    <string name="cafe_detail">Cafe Detail</string>
    <string name="search">Search Here…</string>
    <string name="menu_items">Menu Items</string>
    <string name="res_category">Restaurant Category</string>
    <string name="cafe_category">Cafe Category</string>
    <string name="img_notice">Note: Please Select Profile Image</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="email">rutviklimbachiya1811@gmail.com</string>
    <string name="profile_phone">Enter Mobile No.</string>
    <string name="skip">Skip</string>
    <string name="street1">Enter Street1 For Address</string>
    <string name="street2">Enter Street2 For Address</string>
    <string name="city">Enter Your City</string>
    <string name="state">Enter Your State</string>
    <string name="country">Enter Your Country</string>
    <string name="pincode">Enter Pincode No.</string>
    <string name="update_profile">Update Profile</string>
    <string name="offers">Offers</string>
    <string name="place_order">Place Order</string>
    <string name="my_cart">My Cart</string>
    <string name="my_orders">My Orders</string>

    <string name="slogan">Be wise Shop Wise</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name_of_menu">Name of Menu</string>
    <string name="name_of_food">Name of Food</string>
    <string name="food_name">Food Name</string>
    <string name="description">Description</string>
    <string name="details">Description:</string>
    <string name="rs">₹</string>
    <string name="todo">TODO</string>
    <string name="price">Price: Rs.</string>
    <string name="quantity">Quantity</string>
    <string name="quantity1">Quantity:</string>
    <string name="amount">Amount</string>
    <string name="amount1">Amount:</string>
    <string name="one">1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Delivery</string>
    <string name="hello_blank1_fragment">Hello Takeaway</string>

    <string name="order_no">Order No:</string>
    <string name="order_type">Order Type:</string>
    <string name="order_type1">Takeaway</string>
    <string name="order_type2">Delivery</string>
    <string name="checkout">Checkout</string>
    <string name="continue1">Continue</string>
    <string name="order_summary">Order Summary</string>
    <string name="confirm_order">Confirm Order</string>

    <string name="our_address"><u>Hotel Address</u></string>
    <string name="hotel_name">Hotel The Grand Piano</string>
    <string name="hotel_add1">Vanita Avenue, Sankhari Turning,</string>
    <string name="hotel_add2">Chanasma Highway Road, Gujarat,</string>
    <string name="hotel_add3">Patan-384265</string>
    <string name="hotel_mo">+91-7046062440 +91-9316009307</string>
    <string name="email_text">hotelthegrandpiano@gmail.com</string>
    <string name="website_text">www.hotelthegrandpiano.com</string>
    <string name="shipping_address_text"><u>Shipping Address</u></string>
    <string name="payment_type">Payment Type</string>
    <string name="cash">Cash</string>
    <string name="online">Online</string>
    <string name="confirm">Confirm</string>

</resources>